--- a/architecture/cfg/bag_generateOctomap_params.yaml
+++ b/architecture/cfg/bag_generateOctomap_params.yaml
@@ -29,11 +29,13 @@ uav/laser_topic: "scan_filtered"
 
 
 scan_filter_chain:
-- name: range
-  type: LaserScanRangeFilter
+- name: intensity
+  type: LaserScanIntensityFilter
   params:
-    lower_threshold: 0.7    # Propeller distance
-    upper_threshold: 10
-    upper_replacement_value: 200
+    lower_threshold: 400
+    upper_threshold: 2000
+    lower_range_threshold: 0.7
+    upper_range_threshold: 15
+    upper_replacement_value: 16
 
 
