[data] Collect data to compare sparse approach and orthogonal planes.

--- a/path_planning/CMakeLists.txt
+++ b/path_planning/CMakeLists.txt
@@ -62,11 +62,16 @@ if (CATKIN_ENABLE_TESTING)
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # target_link_libraries(analyzeData ${catkin_LIBRARIES} )
 
-  # ## Octree @ collect results ##
+  # # ## Octree @ collect results ##
   # catkin_add_gtest(collectResults 
   #   test/collect_results.cpp
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # target_link_libraries(collectResults ${catkin_LIBRARIES} ltStar_lib)
+
+  catkin_add_gtest(collectResults_ortho 
+    test/collect_results_ortho.cpp
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  target_link_libraries(collectResults_ortho ${catkin_LIBRARIES} ltStar_lib_ortho)
 
   # ## Octree @ work in progress ##
   # catkin_add_gtest(workInProgress 
@@ -94,10 +99,10 @@ if (CATKIN_ENABLE_TESTING)
   # target_link_libraries(openTests ${catkin_LIBRARIES} ltStar_lib)
 
   # Lazy Theta Star ##
-  catkin_add_gtest(ltstarTests_ortho 
-    test/orthogonal_planes_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(ltstarTests_ortho ${catkin_LIBRARIES} ltStar_lib_ortho)
+  # catkin_add_gtest(ltstarTests_ortho 
+  #   test/orthogonal_planes_tests.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(ltstarTests_ortho ${catkin_LIBRARIES} ltStar_lib_ortho)
   # catkin_add_gtest(ltstarTests 
   #   test/lazyTheta_tests.cpp
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
