--- a/architecture/cfg/realUav_params.yaml
+++ b/architecture/cfg/realUav_params.yaml
@@ -37,7 +37,7 @@ geofence_max/y: 10
 geofence_min/z: 5
 geofence_max/z: 15
 
-path/max_search_iterations: 120
+path/max_time_secs: 120
 path/max_cycles_waited_for_path: 50
 path/safety_margin: 3
 
