--- a/path_planning/CMakeLists.txt
+++ b/path_planning/CMakeLists.txt
@@ -32,7 +32,7 @@ cs_add_library(ltStar_lib src/ltStar_lib.cpp)
 cs_add_library(ltStar_lib_ortho src/ltStar_lib_ortho.cpp)
 
 cs_add_executable(ltStar_async_node src/ltStar_async_node.cpp )
-target_link_libraries(ltStar_async_node  ${catkin_LIBRARIES} ltStar_lib )
+target_link_libraries(ltStar_async_node  ${catkin_LIBRARIES} ltStar_lib_ortho )
 
 cs_add_executable(ltStar_debug_node src/ltStar_debug_node.cpp )
 target_link_libraries(ltStar_debug_node  ${catkin_LIBRARIES} ltStar_lib_ortho)
