[architecture] Working exploration. The free cells are the only bug left.

--- a/path_planning/CMakeLists.txt
+++ b/path_planning/CMakeLists.txt
@@ -82,11 +82,11 @@ if (CATKIN_ENABLE_TESTING)
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # target_link_libraries(collectResults_obstacleAvoidance ${catkin_LIBRARIES} ltStar_lib)
 
-  # ## Octree @ work in progress ##
-  # catkin_add_gtest(workInProgress 
-  #   test/work_in_progress_test.cpp
-  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  # target_link_libraries(workInProgress ${catkin_LIBRARIES} ltStar_lib ltStar_lib_ortho)
+  ## Octree @ work in progress ##
+  catkin_add_gtest(workInProgress 
+    test/work_in_progress_test.cpp
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  target_link_libraries(workInProgress ${catkin_LIBRARIES} ltStar_lib_ortho)
 
   # ## Lazy Theta Star @ orthogonal planes ##
   # catkin_add_gtest(orthogonalPlanesTests 
@@ -94,32 +94,32 @@ if (CATKIN_ENABLE_TESTING)
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # target_link_libraries(orthogonalPlanesTests ${catkin_LIBRARIES} ltStar_lib)
 
-  ## Octree @ depth and size ##
-  catkin_add_gtest(depthSizeTest 
-    test/depth_voxelSide_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(depthSizeTest ${catkin_LIBRARIES} ltStar_lib)
+  # ## Octree @ depth and size ##
+  # catkin_add_gtest(depthSizeTest 
+  #   test/depth_voxelSide_tests.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(depthSizeTest ${catkin_LIBRARIES} ltStar_lib)
 
 
-  ## Lazy Theta Star @ open ##
-  catkin_add_gtest(openTests 
-    test/open_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(openTests ${catkin_LIBRARIES} ltStar_lib)
+  # ## Lazy Theta Star @ open ##
+  # catkin_add_gtest(openTests 
+  #   test/open_tests.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(openTests ${catkin_LIBRARIES} ltStar_lib)
 
-  # Lazy Theta Star ##
-  catkin_add_gtest(ltstarTests_ortho 
-    test/orthogonal_planes_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(ltstarTests_ortho ${catkin_LIBRARIES} ltStar_lib_ortho)
-  catkin_add_gtest(ltstarTests 
-    test/lazyTheta_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(ltstarTests ${catkin_LIBRARIES} ltStar_lib)
-  catkin_add_gtest(ltstarTestsFixture 
-    test/lazyTheta_tests_Fixture.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(ltstarTestsFixture ${catkin_LIBRARIES} ltStar_lib)
+  # # Lazy Theta Star ##
+  # catkin_add_gtest(ltstarTests_ortho 
+  #   test/orthogonal_planes_tests.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(ltstarTests_ortho ${catkin_LIBRARIES} ltStar_lib_ortho)
+  # catkin_add_gtest(ltstarTests 
+  #   test/lazyTheta_tests.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(ltstarTests ${catkin_LIBRARIES} ltStar_lib)
+  # catkin_add_gtest(ltstarTestsFixture 
+  #   test/lazyTheta_tests_Fixture.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(ltstarTestsFixture ${catkin_LIBRARIES} ltStar_lib)
 
 endif()
 
