--- a/lazy_theta_star/CMakeLists.txt
+++ b/lazy_theta_star/CMakeLists.txt
@@ -28,20 +28,20 @@ catkin_simple(ALL_DEPS_REQUIRED)
 ########### 
 ## Build ##
 ###########
-cs_add_library(ltStar_lib src/ltStar_lib.cpp)
+# cs_add_library(ltStar_lib src/ltStar_lib.cpp)
 cs_add_library(ltStar_lib_ortho src/ltStar_lib_ortho.cpp)
 
 cs_add_executable(save_octomap_node src/save_octomap_node.cpp )
-target_link_libraries(save_octomap_node  ${catkin_LIBRARIES} ltStar_lib )
+# target_link_libraries(save_octomap_node  ${catkin_LIBRARIES} ltStar_lib )
 
 cs_add_executable(ltStar_async_node src/ltStar_async_node.cpp )
 target_link_libraries(ltStar_async_node  ${catkin_LIBRARIES} ltStar_lib_ortho )
 
-cs_add_executable(ltStar_async_node_sparse src/ltStar_async_node_sparse.cpp )
-target_link_libraries(ltStar_async_node_sparse  ${catkin_LIBRARIES} ltStar_lib )
+# cs_add_executable(ltStar_async_node_sparse src/ltStar_async_node_sparse.cpp )
+# target_link_libraries(ltStar_async_node_sparse  ${catkin_LIBRARIES} ltStar_lib )
 
-cs_add_executable(ltStar_command_path_node src/ltStar_command_path_node.cpp )
-target_link_libraries(ltStar_command_path_node  ${catkin_LIBRARIES} ltStar_lib )
+# cs_add_executable(ltStar_command_path_node src/ltStar_command_path_node.cpp )
+# target_link_libraries(ltStar_command_path_node  ${catkin_LIBRARIES} ltStar_lib )
 
 cs_install()
 
