--- a/observation_maneuver/CMakeLists.txt
+++ b/observation_maneuver/CMakeLists.txt
@@ -51,18 +51,15 @@ if(CATKIN_ENABLE_TESTING)
     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   target_link_libraries(workInProgress_observation_maneuver ${catkin_LIBRARIES} observation_maneuver)
 
-  # # WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  # # Octree @ neighbors ##
-  # catkin_add_gtest(neighborTests 
-  #   test/neighbor_tests.cpp
-  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  # target_link_libraries(neighborTests ${catkin_LIBRARIES} frontiers_lib neighbors)
-  # catkin_add_gtest(frontiers_tests 
-  #   test/frontier_lib_tests.cpp
-  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  # target_link_libraries(frontiers_tests ${catkin_LIBRARIES} frontiers_lib neighbors)
+  # WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # Observation maneuver ##
+  catkin_add_gtest(observation_maneuver_test
+    test/observationPoints_tests.cpp
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  target_link_libraries(observation_maneuver_test ${catkin_LIBRARIES} observation_maneuver)
 
 endif()
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
