[architecture] Integrate oppairs into state_manager_node.

--- a/architecture/package.xml
+++ b/architecture/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>architecture</name>
-  <version>0.1.0</version>
+  <version>0.2.0</version>
   <description>A package for putting the architecture together</description>
 
   <maintainer email="MargaridaCostaFaria@gmail.com">Margarida Faria</maintainer>
@@ -24,5 +24,6 @@
   <depend>rviz_interface</depend>
   <depend>tf</depend>
   <depend>laser_filters</depend>
+  <depend>observation_maneuver</depend>
 
 </package>
