--- a/observation_maneuver/CMakeLists.txt
+++ b/observation_maneuver/CMakeLists.txt
@@ -43,23 +43,23 @@ cs_export()
 
 ## Add gtest based cpp test target and link libraries
 # catkin_add_gtest(${PROJECT_NAME}-test test/test_frontiers_msgs.cpp)
-if(CATKIN_ENABLE_TESTING)
-  get_filename_component(TEST_WITH_DATA_TEST_DIR "test/data" ABSOLUTE)
+# if(CATKIN_ENABLE_TESTING)
+#   get_filename_component(TEST_WITH_DATA_TEST_DIR "test/data" ABSOLUTE)
 
-  # Work in progress ##
-  catkin_add_gtest(workInProgress_observation_maneuver
-    test/work_in_progress_observationPoints_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(workInProgress_observation_maneuver ${catkin_LIBRARIES} observation_maneuver_lib)
+#   # Work in progress ##
+#   catkin_add_gtest(workInProgress_observation_maneuver
+#     test/work_in_progress_observationPoints_tests.cpp
+#     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+#   target_link_libraries(workInProgress_observation_maneuver ${catkin_LIBRARIES} observation_maneuver_lib)
 
-  # WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  # Observation maneuver ##
-  catkin_add_gtest(observation_maneuver_test
-    test/observationPoints_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(observation_maneuver_test ${catkin_LIBRARIES} observation_maneuver_lib)
+#   # WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+#   # Observation maneuver ##
+#   catkin_add_gtest(observation_maneuver_test
+#     test/observationPoints_tests.cpp
+#     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+#   target_link_libraries(observation_maneuver_test ${catkin_LIBRARIES} observation_maneuver_lib)
 
-endif()
+# endif()
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
