[architecture] State machine to manage the next goal (frontiers, observational point pairs, unreachable frontiers)

--- a/architecture/CMakeLists.txt
+++ b/architecture/CMakeLists.txt
@@ -27,7 +27,7 @@ catkin_simple(ALL_DEPS_REQUIRED)
 # add_library
 # target_link_libraries(my_lib ${catkin_LIBRARIES}) to link your new library against any catkin libraries you have build depended on in your package.xml
 # does some bookkeeping so that your library target can be implicitly used later
-# cs_add_library(frontiers_lib src/frontiers.cpp)
+cs_add_library(goal_state_lib src/goal_state_machine.cpp)
 # cs_add_targets_to_package(frontiers_msgs)
 
  # works just like cs_add_library, but it calls CMake's add_executable(...) instead.
@@ -38,7 +38,7 @@ cs_add_executable(ual_server src/ual_server.cpp)
 target_link_libraries(ual_server)
 
 cs_add_executable(state_manager_node src/state_manager_node.cpp)
-target_link_libraries(state_manager_node )
+target_link_libraries(state_manager_node goal_state_lib)
 
 cs_add_executable(current_position_provider_node src/current_position_provider_node.cpp)
 target_link_libraries(current_position_provider_node)
