[frontiers] Bare bones for next best view node.

--- a/frontiers/CMakeLists.txt
+++ b/frontiers/CMakeLists.txt
@@ -32,6 +32,7 @@ cs_add_library(frontiers_lib src/frontiers.cpp)
 # cs_add_targets_to_package(frontiers_msgs)
 
  # works just like cs_add_library, but it calls CMake's add_executable(...) instead.
+cs_add_executable(next_best_view_node src/next_best_view_node.cpp)
 cs_add_executable(frontiers_async_node src/frontiers_async_node.cpp)
 target_link_libraries(frontiers_async_node frontiers_lib neighbors)
 
