--- a/frontiers/CMakeLists.txt
+++ b/frontiers/CMakeLists.txt
@@ -33,7 +33,7 @@ cs_add_library(next_best_view_lib src/next_best_view.cpp )
 # cs_add_targets_to_package(frontiers_msgs)
 
  # works just like cs_add_library, but it calls CMake's add_executable(...) instead.
-cs_add_executable(next_best_view_node src/next_best_view_node.cpp)
+cs_add_executable(next_best_view_node src/neighbors.cpp src/frontiers.cpp src/next_best_view_node.cpp)
 target_link_libraries(next_best_view_node next_best_view_lib )
 
 cs_add_executable(frontiers_async_node src/frontiers_async_node.cpp)
