--- a/frontiers/CMakeLists.txt
+++ b/frontiers/CMakeLists.txt
@@ -56,11 +56,11 @@ cs_export()
 if(CATKIN_ENABLE_TESTING)
   get_filename_component(TEST_WITH_DATA_TEST_DIR "test/data" ABSOLUTE)
 
-  # # Frontiers @ work in progress ##
-  # catkin_add_gtest(workInProgress_frontiers 
-  #   test/work_in_progress_frontiers_tests.cpp
-  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  # target_link_libraries(workInProgress_frontiers ${catkin_LIBRARIES} frontiers_lib neighbors )
+  # Frontiers @ work in progress ##
+  catkin_add_gtest(workInProgress_frontiers 
+    test/work_in_progress_frontiers_tests.cpp
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  target_link_libraries(workInProgress_frontiers ${catkin_LIBRARIES} next_best_view_lib frontiers_lib neighbors  )
 
   # WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # Octree @ neighbors ##
@@ -72,10 +72,10 @@ if(CATKIN_ENABLE_TESTING)
   #   test/frontier_lib_tests.cpp
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # target_link_libraries(frontiers_tests ${catkin_LIBRARIES} frontiers_lib neighbors)
-  catkin_add_gtest(next_best_view_tests 
-    test/next_best_view_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(next_best_view_tests ${catkin_LIBRARIES} next_best_view_lib)
+  # catkin_add_gtest(next_best_view_tests 
+  #   test/next_best_view_tests.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(next_best_view_tests ${catkin_LIBRARIES} next_best_view_lib)
 
 endif()
 
