[architecture] Check visibility between flyby and unknown.

--- a/lazy_theta_star/CMakeLists.txt
+++ b/lazy_theta_star/CMakeLists.txt
@@ -85,11 +85,17 @@ if (CATKIN_ENABLE_TESTING)
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # target_link_libraries(collectResults_obstacleAvoidance ${catkin_LIBRARIES} ltStar_lib)
 
-  ## Octree @ work in progress ##
+  # # Octree @ work in progress ##
   # catkin_add_gtest(workInProgress 
   #   test/work_in_progress_test.cpp
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # target_link_libraries(workInProgress ${catkin_LIBRARIES} ltStar_lib_ortho)
+
+  # Octree @ visibility ##
+  catkin_add_gtest(visibilityTests 
+    test/visibility_test.cpp
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  target_link_libraries(visibilityTests ${catkin_LIBRARIES} ltStar_lib_ortho)
 
   ## Lazy Theta Star @ orthogonal planes ##
   catkin_add_gtest(orthogonalPlanesTests 
@@ -110,10 +116,10 @@ if (CATKIN_ENABLE_TESTING)
     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   target_link_libraries(openTests ${catkin_LIBRARIES} )
 
-  catkin_add_gtest(ltstarOrthoTests 
-    test/lazyTheta_tests_ortho.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(ltstarOrthoTests ${catkin_LIBRARIES} ltStar_lib_ortho)
+  # catkin_add_gtest(ltstarOrthoTests 
+  #   test/lazyTheta_tests_ortho.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(ltstarOrthoTests ${catkin_LIBRARIES} ltStar_lib_ortho)
 
 
   ## Lazy Theta Star @ Collect measurements for 3d puzzle ## 
