[architecture] Using the pose information directly from Gazebo.

--- a/architecture/package.xml
+++ b/architecture/package.xml
@@ -14,6 +14,7 @@
   <depend>mavros_msgs</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>gazebo_msgs</depend>
   <depend>octomap_msgs</depend>
   <!-- <run_depend>boost</run_depend> -->
   <depend>architecture_msgs</depend>
