--- a/frontiers/CMakeLists.txt
+++ b/frontiers/CMakeLists.txt
@@ -53,10 +53,10 @@ if(CATKIN_ENABLE_TESTING)
   get_filename_component(TEST_WITH_DATA_TEST_DIR "test/data" ABSOLUTE)
 
 #   Frontiers @ work in progress ##
-  catkin_add_gtest(workInProgress_frontiers 
-    test/work_in_progress_frontiers_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(workInProgress_frontiers ${catkin_LIBRARIES} frontiers_lib neighbors  )
+#   catkin_add_gtest(workInProgress_frontiers 
+#     test/work_in_progress_frontiers_tests.cpp
+#     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+#   target_link_libraries(workInProgress_frontiers ${catkin_LIBRARIES} frontiers_lib neighbors  )
 
 #   ## Octree @ neighbors ##
 #   catkin_add_gtest(neighborTests 
@@ -67,6 +67,12 @@ if(CATKIN_ENABLE_TESTING)
 #     test/frontier_lib_tests.cpp
 #     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
 #   target_link_libraries(frontiers_tests ${catkin_LIBRARIES} frontiers_lib neighbors)
+
+  #VOLUME
+  catkin_add_gtest(volume_tests 
+    test/volume_tests.cpp
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  target_link_libraries(volume_tests ${catkin_LIBRARIES} )
 
 endif()
 
