[path_following] Node to replace ual_server

--- a/architecture/CMakeLists.txt
+++ b/architecture/CMakeLists.txt
@@ -52,6 +52,9 @@ target_link_libraries(current_position_provider_node)
 cs_add_executable(gps_utm_tf_broadcaster_node src/gps_utm_tf_broadcaster_node.cpp)
 target_link_libraries(gps_utm_tf_broadcaster_node )
 
+cs_add_executable(ual_communication_node src/ual_communication_node.cpp)
+target_link_libraries(ual_communication_node )
+
 cs_install()
 # cs_install_scripts(scripts/my_script.py)
 cs_export()
